# robot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  OPTIMIZATION.md  README.md  calibration.py  docker-compose.yml  fix_init_api.py  install.py  install.sh  language=requirements.txt  mock_robot_controller.py  pyproject.toml  requirements.txt  robot-bluetooth.service  robot_controller.py  robot_test.py  sensors.py  servo_calibration.json  setup.py  setup_wifi.py  start.bat  start.py  start.sh  start_web_server.py  test_i2c.py  test_web_api.py  web_server.py  wiring.md
docs/: wiring.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  RobotControls.tsx
robot/: __init__.py  base_controller.py  pyvenv.cfg
robot_controller.egg-info/: PKG-INFO  SOURCES.txt
src/robot/: __init__.py  base_controller.py  config.py
src/robot/controllers/: __init__.py  mock_robot_controller.py  robot_controller.py
src/robot/sensors/: __init__.py
src/robot/utils/: logging_utils.py
src/robot/web/: __init__.py  web_server.py
src/robot/web/static/: styles.css
src/robot/web/templates/: index.html
templates/: index.html
