[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-robot"
version = "1.0.0"
description = "Control system for a humanoid robot using Raspberry Pi and PCA9685"
authors = [
    {name = "Robot Team", email = "robot@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["robot", "raspberry pi", "servo", "humanoid", "education"]

dependencies = [
    "adafruit-circuitpython-pca9685>=3.4.0",
    "adafruit-circuitpython-servokit>=1.4.0",
    "flask>=2.2.5",
    "Werkzeug>=2.2.3",
    "Jinja2>=3.1.2",
    "itsdangerous>=2.1.2",
    "MarkupSafe>=2.1.3",
    "Adafruit-PCA9685>=1.0.1",
    "numpy>=1.25.0",
    "cachetools>=5.3.1",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO>=0.7.1",
]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "bandit>=1.7.5",
]

[project.urls]
"Homepage" = "https://github.com/example/robot"
"Bug Tracker" = "https://github.com/example/robot/issues"

[project.scripts]
robot = "robot:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["robot"]

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=robot --cov-report=term --cov-report=xml:coverage.xml"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] 