[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-controller"
version = "0.1.0"
description = "A Python-based controller for a humanoid robot using the PCA9685 servo controller"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Robot Project Maintainers", email = "maintainers@robotproject.org"}
]
dependencies = [
    "adafruit-circuitpython-pca9685>=3.3.9",
    "adafruit-circuitpython-servokit>=1.3.15",
    "RPi.GPIO>=0.7.1",
    "flask>=2.0.1",
    "Werkzeug>=2.0.2",
    "Jinja2>=3.0.3",
    "itsdangerous>=2.0.1",
    "MarkupSafe>=2.0.1",
    "Adafruit-PCA9685>=1.0.1",
    "smbus2>=0.4.1",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
robot-controller = "robot.controllers.robot_controller:main"
robot-web = "robot.web.web_server:main"

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 